--- a/dr_death_report.html
+++ b/dr_death_report.html
@@ -7533,6 +7533,17 @@ a.anchor-link {
 </div>
 </div>
 </div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=81191df6-29fb-44d2-8abf-7f6d1604b5a5">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="1.-Un-ciblage-opportuniste-et-m%C3%A9thodique">1. Un ciblage opportuniste et méthodique<a class="anchor-link" href="#1.-Un-ciblage-opportuniste-et-m%C3%A9thodique">¶</a></h2>
+</div>
+</div>
+</div>
+</div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=13e9f7c5-5c03-476e-ab45-491ec0dd7697">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -7553,13 +7564,24 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="1.-Un-ciblage-opportuniste-et-m%C3%A9thodique">1. Un ciblage opportuniste et méthodique<a class="anchor-link" href="#1.-Un-ciblage-opportuniste-et-m%C3%A9thodique">¶</a></h2><p>L'analyse croisée du graphique sur le genre et l'âge des victimes avec les données démographiques et juridiques britanniques révèle un schéma de prédation précis : Harold Shipman ciblait en priorité des femmes âgées, veuves ou proches de l'être. Cela s'explique par plusieurs facteurs :</p>
+<p>L'analyse croisée du graphique sur le genre et l'âge des victimes avec les données démographiques et juridiques britanniques révèle un schéma de prédation précis : Harold Shipman ciblait en priorité des femmes âgées, veuves ou proches de l'être. Cela s'explique par plusieurs facteurs :</p>
 <ul>
 <li>En Angleterre, 70 % des femmes survivent à leur conjoint, ce qui les rend souvent seules et vulnérables.</li>
 <li>Leur espérance de vie plus longue (85 ans vs 79 ans pour les hommes) les expose davantage à une prise en charge médicale prolongée.</li>
 <li>En droit anglais, l'héritage revient au dernier survivant du couple, ce qui peut motiver la falsification de testaments.</li>
 </ul>
 <p>Shipman exploitait ainsi une population isolée, peu contestataire et souvent sans témoin direct, maximisant ses chances d'agir sans éveiller de soupçon.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=e32d02b6-1743-4ebe-9121-fd89e9e2a468">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="2.-Un-mode-op%C3%A9ratoire-cal%C3%A9-sur-le-rythme-d'un-professionnel-%22ordinaire%22">2. Un mode opératoire calé sur le rythme d'un professionnel "ordinaire"<a class="anchor-link" href="#2.-Un-mode-op%C3%A9ratoire-cal%C3%A9-sur-le-rythme-d'un-professionnel-%22ordinaire%22">¶</a></h2>
 </div>
 </div>
 </div>
@@ -7581,7 +7603,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="2.-Un-mode-op%C3%A9ratoire-cal%C3%A9-sur-le-rythme-d'un-professionnel-%22ordinaire%22">2. Un mode opératoire calé sur le rythme d'un professionnel "ordinaire"<a class="anchor-link" href="#2.-Un-mode-op%C3%A9ratoire-cal%C3%A9-sur-le-rythme-d'un-professionnel-%22ordinaire%22">¶</a></h2><p>Le graphique sur la répartition hebdomadaire des meurtres montre une concentration nette des décès entre le lundi et le vendredi (plus de 90 % des cas), avec une chute drastique le week-end (à peine 8,8 % les samedi et dimanche cumulés).<br/>
+<p>Le graphique sur la répartition hebdomadaire des meurtres montre une concentration nette des décès entre le lundi et le vendredi (plus de 90 % des cas), avec une chute drastique le week-end (à peine 8,8 % les samedi et dimanche cumulés).<br/>
 Ce schéma suggère une logique organisationnelle claire :</p>
 <ul>
 <li>Shipman agissait comme un "professionnel des heures ouvrables", planifiant ses meurtres sur son temps de travail officiel, au rythme des consultations.</li>
@@ -7592,24 +7614,35 @@ Ce schéma suggère une logique organisationnelle claire :</p>
 </div>
 </div>
 </div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=952a247e-a8ee-41f5-bf31-541723ecfac0">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=1da92a55-23a3-469a-855c-c41c09037064">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="image.png" src="compare_doc.png"/></p>
+<h2 id="3.-Une-pr%C3%A9dation-horaire-ciblant-les-moments-de-vuln%C3%A9rabilit%C3%A9-maximale">3. Une prédation horaire ciblant les moments de vulnérabilité maximale<a class="anchor-link" href="#3.-Une-pr%C3%A9dation-horaire-ciblant-les-moments-de-vuln%C3%A9rabilit%C3%A9-maximale">¶</a></h2>
 </div>
 </div>
 </div>
 </div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=5e7e9315-054b-45bc-9d3e-340b34b96581">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=d6d4cd24-9577-446c-8ddc-1d5dc41ba6d2">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="3.-Une-pr%C3%A9dation-horaire-ciblant-les-moments-de-vuln%C3%A9rabilit%C3%A9-maximale">3. Une prédation horaire ciblant les moments de vulnérabilité maximale<a class="anchor-link" href="#3.-Une-pr%C3%A9dation-horaire-ciblant-les-moments-de-vuln%C3%A9rabilit%C3%A9-maximale">¶</a></h2><p>L'analyse de la distribution horaire des décès révèle un pic saisissant entre 14h et 17h, avec un maximum vers 15h, en contraste net avec la répartition équilibrée des décès naturels. Cette concentration temporelle s'explique par plusieurs facteurs stratégiques :</p>
+<p><img alt="Dashboard" src="compare_doc.png"/>.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=1e779e6a-a2b7-409a-baf5-c0a62190f820">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>L'analyse de la distribution horaire des décès révèle un pic saisissant entre 13h et 16h, avec un maximum vers 15h, en contraste net avec la répartition équilibrée des décès naturels. Cette concentration temporelle s'explique par plusieurs facteurs stratégiques :</p>
 <ul>
 <li>Shipman alignait ses meurtres sur ses visites à domicile de l'après-midi, après ses consultations matinales en cabinet, créant ainsi une fenêtre d'action prévisible et sécurisée.</li>
 <li>Cette plage horaire offrait une conjonction optimale d'isolement des victimes, souvent des femmes âgées seules à leur domicile à ce moment précis de la journée.</li>
@@ -7617,6 +7650,17 @@ Ce schéma suggère une logique organisationnelle claire :</p>
 </ul>
 <p>Ce schéma temporel lui permettait d'intercaler ses meurtres entre des visites légitimes, normalisant ainsi ces événements dans sa routine professionnelle.<br/>
 Cette signature statistique, identifiée plus tard par le professeur David Spiegelhalter, démontre à quel point Shipman avait méthodiquement intégré ses actes criminels à une pratique médicale en apparence irréprochable. L'heure des décès constitue ainsi un "marqueur comportemental" révélateur, qui aurait pu — selon les experts — permettre sa détection dès 1996, évitant potentiellement des dizaines de victimes supplémentaires.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=caf1c0af-31b3-4719-b99b-74382cedd212">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="4.-Une-fluctuation-r%C3%A9v%C3%A9latrice-:-l'impact-des-plaintes-et-de-l'installation-en-cabinet-ind%C3%A9pendant">4. Une fluctuation révélatrice : l'impact des plaintes et de l'installation en cabinet indépendant<a class="anchor-link" href="#4.-Une-fluctuation-r%C3%A9v%C3%A9latrice-:-l'impact-des-plaintes-et-de-l'installation-en-cabinet-ind%C3%A9pendant">¶</a></h2>
 </div>
 </div>
 </div>
@@ -7638,7 +7682,7 @@ Cette signature statistique, identifiée plus tard par le professeur David Spieg
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="4.-Une-fluctuation-r%C3%A9v%C3%A9latrice-:-l'impact-des-plaintes-et-de-l'installation-en-cabinet-ind%C3%A9pendant">4. Une fluctuation révélatrice : l'impact des plaintes et de l'installation en cabinet indépendant<a class="anchor-link" href="#4.-Une-fluctuation-r%C3%A9v%C3%A9latrice-:-l'impact-des-plaintes-et-de-l'installation-en-cabinet-ind%C3%A9pendant">¶</a></h2><p>L'analyse du graphique de distribution annuelle des meurtres révèle une anomalie significative : un net ralentissement de l'activité criminelle entre 1990 et 1992. Cette période coïncide précisément avec deux événements majeurs :</p>
+<p>L'analyse du graphique de distribution annuelle des meurtres révèle une anomalie significative : un net ralentissement de l'activité criminelle entre 1990 et 1992. Cette période coïncide précisément avec deux événements majeurs :</p>
 <ul>
 <li>Des plaintes formelles déposées par des patients auprès de l'autorité sanitaire locale de Donneybrook en 1990 et 1992, suggérant une période de surveillance accrue.</li>
 <li>La préparation puis l'ouverture de son cabinet indépendant au 21 Market Street à Hyde le 1er janvier 1992, après avoir exercé au centre médical de Donneybrook.</li>
